# nixvim

./: .editorconfig  .envrc  .git-blame-ignore-revs  .gitignore  .tmp  CONTRIBUTING.md  LICENSE  MAINTAINING.md  README.md  TODO.md  all-maintainers.nix  build-docs.sh  buildbot-nix.toml  default.nix  docs.nix  example.nix  flake.nix  nixbot.toml  nixpkgs.nix  nixvim.nix  plugin_template.nix  plugin_template_lua.nix  statix.toml  test.sh  typos.toml  version-info.toml
.circleci/: config.yml
.github/: dependabot.yml  mergify.yml
ci/: README.md  conform-nvim.nix  default.nix  efmls-configs.nix  generate.nix  none-ls.nix  nvim-lint.nix  parse.nix  shell.nix  update.nix
docs/: 0001-Output-GFM-admonition.patch  0001-nixos-render-docs-Output-GFM-admonition.patch  0002-nixos-render-docs-Support-gfm-style-admonitions.patch  SUMMARY.md  (+10 more)
docs/gfm-alerts-to-admonitions/: default.nix  pyproject.toml
docs/gfm-alerts-to-admonitions/gfm_alerts_to_admonitions/: __init__.py  main.py
docs/gfm-alerts-to-admonitions/tests/: test_plugin.py
docs/gfm-alerts-to-admonitions/tests/test_plugin/: test_parse_caution_.yml  test_parse_important_.yml  test_parse_note_.yml  test_parse_tip_.yml  test_parse_warning_.yml
docs/multipage-render-docs/: default.nix  pyproject.toml
docs/multipage-render-docs/multipage_render_docs/: __init__.py
docs/multipage-render-docs/tests/: test_integration_nixos_render_docs.py  test_render_option_markdown.py  test_render_sections.py
man-docs/nixvim-render-docs/src/: pyproject.toml
man-docs/nixvim-render-docs/src/nixvim_render_docs/: __init__.py
(+2235 files in other folders)
